# BLJ2022IlPre

./: .gitignore  index.html
C/KW37/Aufgabe 4/: main.c
C/KW37/Aufgabe 4.2.2/: main.c
C/KW37/Guesse Number Spiel/: main.c
C/KW37/helloworld-cmd/: helloworld.c
C/KW37/helloworld-ide/: main.c
C/KW37/nummerspiel/: main.c
C/KW38/: CMakeLists.txt
C/KW38/Debugging 1/: CMakeLists.txt
C/KW38/Debugging 2/: main.c
C/KW38/Schaltjahr1/: CMakeLists.txt  main.c
C/KW39/: CMakeLists.txt  main.c
C/KW39/Bubblesort/: CMakeLists.txt  binarysearch.c  binarysearch.h  main.c
C/KW39/binarysearch/: CMakeLists.txt  main.c
C/KW40/2arrays/: CMakeLists.txt  main.c
C/KW40/SlidingPuzzle2.0/: CMakeLists.txt  main.c  utils.c  utils.h
C/KW40/ToDoDefinitionOfDone-main/: CMakeLists.txt
C/KW40/ToDoDefinitionOfDone-main/ToDoDefinitionOfDone-main/: calculator.c  calculator.h  main.c
C/KW40/lightsoutgame/: CMakeLists.txt  main.c
C/KW43/AnalogeUhr/: CMakeLists.txt  main.c
C/KW43/htmlC/: CMakeLists.txt  console.c  externalfile.c  header.h  main.c
C/KW43/makeUppercase/: CMakeLists.txt  main.c
C/KW43/struct/: CMakeLists.txt  main.c  struct.c
C/KW43/test struct/: CMakeLists.txt  struct.c
C/KW44/LinkedLists/: CMakeLists.txt  linkedlist.h  linkedlistsource.c  main.c
C/KW44/linkedlist2/: CMakeLists.txt  main.c  (+2 more)
C/inputhandler/: CMakeLists.txt  inputhandler.c  inputhandler.h  main.c
C/test/: hamilton.txt
HTML/: baking.index.html
HTML/bakingwebsite/: baking.index.html  index.html
üK 106/Commands und Aufgaben/: Sql_com1.sql  sql_com2.sql  sql_com5.sql  sql_com6.sql
(+138 files in other folders)
